Fix Kotlin and DynamoDB compatibility issues